tests/baselines/reference/exponent-part.errors.txt
exponent-part.ts(15,1): error TS1352: A bigint literal cannot use exponential notation.


==== exponent-part.ts (1 errors) ====
    // Copyright (C) 2017 Robin Templeton. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    description: >
      It is a Syntax Error if the NumericLiteralBase contains an ExponentPart.
    esid: sec-numeric-literal-static-semantics-early-errors
    features: [BigInt]
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    0e0n;
    ~~~~
!!! error TS1352: A bigint literal cannot use exponential notation.
    